@@ -28,6 +28,7 @@ extern "C" {
 #define IPMI_IANA_ENTERPRISE_ID_SUN_MICROSYSTEMS         42
 #define IPMI_IANA_ENTERPRISE_ID_INTEL                   343
 #define IPMI_IANA_ENTERPRISE_ID_DELL                    674
+#define IPMI_IANA_ENTERPRISE_ID_MAGNUM_TECHNOLOGIES    5593
 #define IPMI_IANA_ENTERPRISE_ID_QUANTA                 7244
 #define IPMI_IANA_ENTERPRISE_ID_FUJITSU               10368
 #define IPMI_IANA_ENTERPRISE_ID_PEPPERCON             10437
