@@ -175,8 +175,15 @@ extern "C" {
  * Supermicro                              *
  *******************************************/
 
-#define IPMI_SUPERMICRO_PRODUCT_ID_X7DBR_3     4
+/* Seen in the wild w/ Peppercon IANA number 10437 */
+/* achu: there is no product name pattern here, what gives Supermicro? */
+#define __IPMI_SUPERMICRO_PRODUCT_ID_FOUR      4
+#define IPMI_SUPERMICRO_PRODUCT_ID_X7DBR_3     __IPMI_SUPERMICRO_PRODUCT_ID_FOUR
+#define IPMI_SUPERMICRO_PRODUCT_ID_X7DB8       __IPMI_SUPERMICRO_PRODUCT_ID_FOUR
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTN       __IPMI_SUPERMICRO_PRODUCT_ID_FOUR
+#define IPMI_SUPERMICRO_PRODUCT_ID_X7SBI_LN4   __IPMI_SUPERMICRO_PRODUCT_ID_FOUR
 
+/* Seen in the wild w/ Supermicro workaround IANA number 47488 */
 #define __IPMI_SUPERMICRO_PRODUCT_ID_X8DT      43707
 #define IPMI_SUPERMICRO_PRODUCT_ID_X8DTH       __IPMI_SUPERMICRO_PRODUCT_ID_X8DT
 #define IPMI_SUPERMICRO_PRODUCT_ID_X8DTG       __IPMI_SUPERMICRO_PRODUCT_ID_X8DT
@@ -186,12 +193,18 @@ extern "C" {
  * specifically for vendor or vendor changed for themselves.
  */
 #define IPMI_SUPERMICRO_PRODUCT_ID_X8DTU_6PLUS 1549
-#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_3F    6
+#define __IPMI_SUPERMICRO_PRODUCT_ID_X8DTL     6
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL       __IPMI_SUPERMICRO_PRODUCT_ID_X8DTL
+#define IPMI_SUPERMICRO_PRODUCT_ID_X8DTL_3F    __IPMI_SUPERMICRO_PRODUCT_ID_X8DTL
 #define IPMI_SUPERMICRO_PRODUCT_ID_X8SIL_F     1541
 #define __IPMI_SUPERMICRO_PRODUCT_ID_X9SC      1572
 #define IPMI_SUPERMICRO_PRODUCT_ID_X9SCL       __IPMI_SUPERMICRO_PRODUCT_ID_X9SC
 #define IPMI_SUPERMICRO_PRODUCT_ID_X9SCM       __IPMI_SUPERMICRO_PRODUCT_ID_X9SC
 #define IPMI_SUPERMICRO_PRODUCT_ID_X8DTNPLUS_F 1551
+
+/* Seen in the wild w/ Magnum Technologies IANA number 5593 */
+/* defined above: IPMI_SUPERMICRO_PRODUCT_ID_X8DTL */
+#define IPMI_SUPERMICRO_PRODUCT_ID_X7SBI_LN4_B 4404
 
 #ifdef __cplusplus
 }
