@@ -1,3 +1,7 @@
+2011-09-20  Albert Chu <chu11@llnl.gov>
+
+	* Support Supermicro X7DB8, X8DTN, X7SBI-LN4, X8DTL OEM sensors.
+	
 2011-09-19  Albert Chu <chu11@llnl.gov>
 
 	* ipmi-dcmi/: Handle additional error codes for optional portions.
